--- a/ABCquestionnaire/templates/ABCquestionnaire/final.html
+++ b/ABCquestionnaire/templates/ABCquestionnaire/final.html
@@ -85,8 +85,8 @@
 </table>
 <!-- </div>  -->
 <div class="position">
-  <p><b>What next?</b></p>
-  <p>Your results should prompt you to reflect on your academic confidence regarding attending and participating in learning events, as well as your personal study and preparation for assessments. 
+  <p><b>What's next?</b><br>
+    Your results should prompt you to reflect on your academic confidence regarding attending and participating in learning events, as well as your personal study and preparation for assessments. 
     Consider what, if anything, you wish to improve. You may wish to attend some of the relevant workshops on academic study skills provided by student support and wellbeing or discuss 
     how to improve your academic confidence at your next personal tutor meeting.</p>
 </div>
